update all layer code of evaluation entity